# koshu-from-niigata

./: .gitignore  README.org
koshu-open-data-converter/: LICENSE  SimpleOption.hs  koshu-file.hs  koshu-from-csv.hs  koshu-open-data-converter.cabal  niigata-city-meta-data.hs
koshu-open-data-converter/sketch/koshu-from-csv/abc/: 123h.csv  DUMMY  README.md  abc.judge  cmd
koshu-open-data-converter/sketch/koshu-from-csv/shape/: INOUT.sh  README.md  box.csv  comma.csv  from.sh  line.csv  square.csv  triangle.csv
koshu-open-data-converter/sketch/koshu-from-csv/trim/: INOUT.sh  README.md  cmd  trim.csv
niigata-city/: META.k  README.md  convert-co2.sh  convert-gazou.sh  convert-ignore.txt  convert-jinkou.sh  convert-kujinkou.sh  convert-log.k  convert-readme.sh  convert-sub.sh  convert.sh  wget-data.sh
niigata-city/convert-judge/: co2.judge  gazou.judge  jinkou.judge  kujinkou.judge  od-gis-113-iseki.judge  od-gis-114-asaichi.judge  od-gis-137-shiyakusho-etc.judge  od-gis-153-chisan-inshoku.judge  od-gis-190-kenkodukuri-bento.judge  od-gis-71-shiminnoen.judge  od-gis-76-rentcycle.judge  od-gis-94-library.judge  od-juki-syoumei-mado.judge  od-zei-syoumei-mado.judge  sagatabird.judge  toyanobird.judge
niigata-city/convert-judge/gis/: od-gis-10092-rentcycle.judge  od-gis-10096-onseninstitution.judge  od-gis-102-waterworksinstitution.judge  od-gis-103-gesuido.judge  od-gis-107-hoikuen.judge  od-gis-115-farmstand.judge  od-gis-152-chisan-kouri.judge  od-gis-189-kenkodukuri-inshoku.judge  od-gis-196-hojoten.judge  od-gis-257-kokudo-hashi.judge  od-gis-258-kendo-hashi.judge  od-gis-259-shido-hashi.judge  od-gis-553-kenkodukuri-kyushoku.judge  od-gis-57-himawari.judge  od-gis-58-jidocenter.judge  od-gis-59-park.judge  od-gis-77-pkbicycles.judge  od-gis-78-junkanbus-inuyasha.judge  od-gis-79-junkanbus-hakusan.judge  od-gis-80-onseninstitution.judge  (+6 more)
niigata-city/convert-log/: convert-co2-log.k  convert-gazou-log.k  convert-jinkou-log.k  convert-kujinkou-log.k  convert-log.k
niigata-city/gis/: od-gis-80-onseninstitution.k
niigata-city/heading/: heading-gazou-calc.k  heading-gazou-calc.sh  heading-gazou-data.k
niigata-city/meta/: META.k  meta-calc.k  meta-data.sh
(+292 files in other folders)
